初创对象在 Eden 区。